--- a/Suaah/Areas/Customer/Views/HotelBookings/Delete.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/Delete.cshtml
@@ -21,6 +21,6 @@
 
         <input type="submit" value="Delete" class="btn btn-danger" /> <span>|</span>
 
-        <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
+        <a asp-action="PendingReservation" class="btn btn-outline-primary">Back to Summary</a>
     </div>
 </form>
