--- a/Suaah/Areas/Admin/Views/Customers/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Customers/Index.cshtml
@@ -35,16 +35,16 @@
 
 
     </div>
-    <br />
-    <div class="col-8">
-        <partial name="_Pagination" />
+    <div class="row w-75 m-4">
+        <div class="text-center">
+            <partial name="_Pagination" />
+        </div>
     </div>
-    <br />
     <div>
-        <input type="submit" value="-  Search  -" class="btn btn-outline-danger p-2" style="width:100%" onclick="go();"/>
+        <input type="submit" value="-  Search  -" class="btn btn-outline-danger p-2" style="width:100%" onclick="go();" />
     </div>
-    
-    
+
+
 </form>
 
 <div class="text-center">
