--- a/Suaah/Areas/Admin/Views/Customers/Users.cshtml
+++ b/Suaah/Areas/Admin/Views/Customers/Users.cshtml
@@ -38,8 +38,8 @@
             </select>
         </div>
 
-        <div class="row m-3">
-            <div class="col-5 mx-5">
+        <div class="row w-75 m-4">
+            <div class="text-center">
                 <partial name="_Pagination" />
             </div>
         </div>
