--- a/Suaah/Areas/Admin/Views/Airlines/Edit.cshtml
+++ b/Suaah/Areas/Admin/Views/Airlines/Edit.cshtml
@@ -3,13 +3,13 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Edit</h1>
-
-<h4>Airline</h4>
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Edit Hotel</h1>
+</div>
 <hr />
+
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 m-auto">
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Code" />
@@ -26,24 +26,21 @@
                 <span asp-validation-for="CountryId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+               <label asp-for="Description" class="control-label"></label>
+               <textarea asp-for="Description" rows="3" class="form-control" placeholder="Description"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
              <div class="form-group w-50">
                 <label asp-for="ImageUrl" class="control-label l"></label>
                 <input class="form-control" accept="image/*" type="file" name="image" id="upFile1" />
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group m-3 p-3">
+                <input type="submit" value="Save" class="btn btn-primary" /> || <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+ 
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
