--- a/Suaah/Areas/Admin/Views/Airlines/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Airlines/Index.cshtml
@@ -59,7 +59,7 @@
                     @Html.DisplayNameFor(model => model.CountryId)
                 </a>
             </th>
-            <th></th>
+            <th>Operations</th>
         </tr>
     </thead>
     <tbody>
