--- a/Suaah/Areas/Customer/Views/Home/Index.cshtml
+++ b/Suaah/Areas/Customer/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
             {
 
                 <div class="card m-auto" style="width: 18rem;">
-                    <img src="@item.PhotoPath" class="card-img-top" alt="@item.Name" style="height:200px">
+                    <img src="@item.FlagPath" class="card-img-top" alt="@item.Name" style="height:200px">
                     <div class="card-body">
                         <h5 class="card-title">@item.Name</h5>
                         <a asp-area="Admin" asp-controller="Countries" asp-action="Details" asp-route-id="@item.ID" class="btn btn-primary">Details</a>
