--- a/Suaah/Areas/Admin/Views/Countries/Create.cshtml
+++ b/Suaah/Areas/Admin/Views/Countries/Create.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="FlagPath" class="control-label"></label>
+                <input asp-for="FlagPhoto" type="file" accept="image/png, image/jpeg, image/ico, image/tiff, image/svg"  class="form-control" />
+                <span asp-validation-for="FlagPhoto" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
