--- a/Suaah/Areas/Admin/Views/Countries/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/Countries/Details.cshtml
@@ -20,10 +20,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhotoPath)
+            @Html.DisplayNameFor(model => model.FlagPhoto)
         </dt>
         <dd class = "col-sm-10">
-            <img src="@Model.PhotoPath" class="img-fluid img-thumbnail"/>
+            <img src="@Model.FlagPath" class="img-fluid img-thumbnail"/>
         </dd>
     </dl>
 </div>
