--- a/Suaah/Areas/Admin/Views/Countries/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/Countries/Details.cshtml
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="col-8 col-lg-5 offset-lg-1 text-left position-relative">
-                    <img src="@Model.PhotoPath" style="width:80%; height:auto; position:absolute" />
+                    <img src="@Model.PhotoPath" style="width:80%; height:500%; position:absolute" />
                 </div>
             </div>
         </div>
@@ -44,6 +44,7 @@
 
     <br /><br /><br /><br />
     <br /><br /><br /><br />
+    <br /><br />
     <br /><br />
 </div>
 <br />
