--- a/Suaah/Areas/Admin/Views/Countries/Delete.cshtml
+++ b/Suaah/Areas/Admin/Views/Countries/Delete.cshtml
@@ -16,7 +16,7 @@
 
 
 <form asp-action="Delete">
-    <input type="hidden" asp-for="Id" />
+    <input type="hidden" asp-for="ID" />
     <div class="form-group m-3 p-3">
         @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
         {
